# decks-and-hexes

./: .gitignore  01_overview.md  02_setup.md  05_card_anatomy_and_timing.md  CLAUDE.md  CONTRIBUTING.md  README.md  cards_fortress.md  cards_vanguard.md  package-lock.json  passives.md  render.yaml
.claude/: launch.json
backend/: parse_game_log.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bbffeaccfe47_initial_schema.py
backend/app/: main.py
backend/app/api/: lobby.py  routes.py  ws_manager.py
backend/app/data_loader/: loader.py
backend/app/game_engine/: balance_report.py  card_packs.py  cards.py  cpu_player.py  effect_resolver.py  effects.py  game_state.py  hex_grid.py  simulation.py
backend/app/models/: database.py  game.py
backend/app/storage/: __init__.py  analytics.py  engine.py  game_store.py  repository.py  serializer.py
backend/scripts/: run_simulation.py
backend/tests/: conftest.py  test_api.py  test_card_resolution.py  test_cards.py  test_data_loader.py  test_debt.py  test_effects.py  test_game_state.py  test_hex_grid.py  test_new_cards.py  test_repository.py  test_search_zone.py  test_serializer.py  test_simulation.py  test_smart_roll.py
data/: cards_fortress.md  cards_fortress.yaml  cards_neutral.md  cards_neutral.yaml  cards_swarm.md  cards_swarm.yaml  cards_vanguard.md  cards_vanguard.yaml  objectives.md  objectives.yaml  passives.md  passives.yaml
docs/: icon_prompts.md
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  (+1 more)
(+64 files in other folders)
